# cg-labs

./: .dockerignore  .gitignore  Dockerfile.back  Dockerfile.front  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
back/: main.py
back/lab1/: main.py
back/lab1/color_converter/: cmyk_rgb_hsl.py  gui.py
back/lab2/: routes.py  schemas.py
back/lab2/filters/: __init__.py  morph.py  nonlinear.py
back/lab2/utils/: kernels.py  minio.py
back/lab3/: routes.py  schemas.py
back/lab3/utils/: algorithms.py  utils.py
back/utils/: defines.py  utils.py
docs/: lab2-report.md
front/: .npmrc  package.json  tsconfig.json  vite.config.ts
front/electron/: main.js
front/src/: App.tsx
front/src/components/: Sidebar.tsx
front/src/components/lab2/: Lab2Window.tsx  Sidebar.tsx
front/src/lab1/: Lab1Window.tsx
front/src/lab2/: ErrorAlert.tsx  ImageDisplay.tsx  ImageGallery.tsx  Lab2Window.tsx  TabHeader.tsx
front/src/lab2/etc/: constants.ts  types.ts
front/src/lab2/utils/: api.ts  constants.ts  types.ts  utils.ts
front/src/lab3/: Canvas.tsx  CustomSelect.tsx  Lab3Window.tsx
front/src/lab3/utils/: api.ts  schemas.ts  utils.ts
lab1/color_converter/: gui.py
lab2/filters/: morph.py  nonlinear.py
lab2/utils/: kernels.py
opengl/: .gitignore  CMakeLists.txt
opengl/assets/shaders/: sphere.fs  sphere.vs
opengl/docs/: keys.md
opengl/src/: config.h  main.cpp
opengl/src/app/: app.cpp  app.h  inputmanager.cpp  inputmanager.h  movingcamera.h
opengl/src/globjects/: GLComposite.cpp  GLComposite.h  GLLetter.cpp  GLLetter.h  GLObject.h
opengl/src/glutils/: texturemanager.cpp
opengl/src/managers/: keybindings.cpp  keybindings.h
opengl/src/transformations/: OrthographicProjections.cpp  OrthographicProjections.h  Transformations.cpp  Transformations.h
opengl/src/utils/: Logger.h  Movement.h
scripts/: kill.bat  proc.sh  run.sh
