[tool.poetry]
name = "kg-labs"
version = "0.1.0"
description = ""
authors = ["Snail Mail <<>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
opencv-python-headless = "^4.10.0.84"
numpy = "^2.1.2"
tk = "^0.1.0"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
python-multipart = "^0.0.16"
minio = "^7.2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
